--- a/Tendr/Views/Home/Index.cshtml
+++ b/Tendr/Views/Home/Index.cshtml
@@ -4,10 +4,10 @@
 
 <html>
 <head>
-	<title>title</title>
+	<title>Tendr</title>
 </head>
 <body>
-<div id="example"></div>
+<div id="root"></div>
 <script src="./dist/bundle.js"></script>
 </body>
 </html>
