--- a/Tendr/Views/Home/Index.cshtml
+++ b/Tendr/Views/Home/Index.cshtml
@@ -3,11 +3,11 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-	<title>Tendr</title>
-</head>
-<body>
-<div id="root"></div>
-<script src="./dist/bundle.js"></script>
-</body>
+	<head>
+		<title>Tendr</title>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script src="./assets/bundle.js"></script>
+	</body>
 </html>
