small style fixes

--- a/Tendr/node_src/index.less
+++ b/Tendr/node_src/index.less
@@ -1,3 +1,14 @@
-.white-bg {
+.bg-white {
 	background-color: #fff;
+}
+
+.ant-layout {
+	.ant-layout-sider {
+		text-transform: uppercase;
+	}
+
+	.ant-layout-content {
+		overflow: initial;
+		padding: 16px 24px;
+	}
 }
