using single Save button

--- a/Tendr/node_src/index.less
+++ b/Tendr/node_src/index.less
@@ -2,6 +2,12 @@
 	background-color: #fff;
 }
 
+.single-line-text {
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+
 .ant-layout {
 	.ant-layout-sider {
 		text-transform: uppercase;
