added public script bundle

--- a/Tendr/Views/Home/Index.cshtml
+++ b/Tendr/Views/Home/Index.cshtml
@@ -8,6 +8,11 @@
 	</head>
 	<body>
 		<div id="root"></div>
-		<script src="./assets/bundle.js"></script>
+		@if(Context.Request.Host.Host == "app.tendr.local") {
+			<script src="./assets/app.js"></script>
+		}
+		else {
+			<script src="./assets/public.js"></script>
+		}
 	</body>
 </html>
