--- a/Tendr/node_src/index.less
+++ b/Tendr/node_src/index.less
@@ -18,3 +18,11 @@
 		padding: 16px 24px;
 	}
 }
+
+.logo {
+	width: 120px;
+	height: 31px;
+	background: rgba(255,255,255,.2);
+	margin: 16px 24px 16px 0;
+	float: left;
+  }
