small style fixes

--- a/Tendr/node_src/index.less
+++ b/Tendr/node_src/index.less
@@ -1,11 +1,21 @@
-.bg-white {
-	background-color: #fff;
-}
+.ant-layout.public-layout {
+	background-color: inherit;
 
-.single-line-text {
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
+	.logo {
+		width: 120px;
+		height: 31px;
+		background: #eee;
+		margin: 16px 24px 16px 0;
+		float: left;
+	}
+
+	.ant-layout-header {
+		background-color: inherit;
+	}
+
+	.ant-layout-footer {
+		background-color: inherit;
+	}
 }
 
 .ant-layout {
@@ -19,10 +29,12 @@
 	}
 }
 
-.logo {
-	width: 120px;
-	height: 31px;
-	background: rgba(255,255,255,.2);
-	margin: 16px 24px 16px 0;
-	float: left;
-  }
+.bg-white {
+	background-color: #fff;
+}
+
+.single-line-text {
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
