--- a/Tendr/Views/Home/Index.cshtml
+++ b/Tendr/Views/Home/Index.cshtml
@@ -8,11 +8,21 @@
 	</head>
 	<body>
 		<div id="root"></div>
-		@if(Context.Request.Host.Host == "app.tendr.local") {
+		@if (Context.Request.Host.Host == "app.tendr.local")
+		{
 			<script src="./assets/app.js"></script>
 		}
-		else {
+		else
+		{
 			<script src="./assets/public.js"></script>
+			<hr />
+			<dl>
+				@foreach (var claim in User.Claims)
+				{
+					<dt>@claim.Type</dt>
+					<dd>@claim.Value</dd>
+				}
+			</dl>
 		}
 	</body>
 </html>
