removed unused Idx code

--- a/Idx/Views/Shared/_Layout.cshtml
+++ b/Idx/Views/Shared/_Layout.cshtml
@@ -29,11 +29,6 @@
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Idx</a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-					<li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
                 <partial name="_LoginPartial" />
             </div>
         </div>
@@ -45,7 +40,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - Idx</p>
+            <p>&copy; @DateTime.Today.Year - Idx</p>
         </footer>
     </div>
 
