fixed user registration on postgres & linq2db

--- a/Idx/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Idx/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@using Idx.Entities
+@inject SignInManager<DbUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
