fixed identity manage layout, fixed razor pages warnings

--- a/Idx/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Idx/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,11 +1,12 @@
 ﻿@page
 @model ChangePasswordModel
 @{
-    ViewData["Title"] = "Change password";
+	Layout = "./_Layout.cshtml";
+	ViewData["Title"] = "Change password";
 }
 
 <h4>@ViewData["Title"]</h4>
-@Html.Partial("_StatusMessage", Model.StatusMessage)
+<partial name="_StatusMessage", for="StatusMessage" />
 <div class="row">
     <div class="col-md-6">
         <form id="change-password-form" method="post">
