--- a/Idx/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Idx/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,8 +1,9 @@
 ﻿@page
 @model PersonalDataModel
 @{
-    ViewData["Title"] = "Personal Data";
-    ViewData["ActivePage"] = ManageNavPages.PersonalData;
+	Layout = "./_Layout.cshtml";
+	ViewData["Title"] = "Personal Data";
+	ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
 <h4>@ViewData["Title"]</h4>
