--- a/Idx/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Idx/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,11 +1,12 @@
 ﻿@page
 @model IndexModel
 @{
+	Layout = "./_Layout.cshtml";
     ViewData["Title"] = "Profile";
 }
 
 <h4>@ViewData["Title"]</h4>
-@Html.Partial("_StatusMessage", Model.StatusMessage)
+<partial name="_StatusMessage", for="StatusMessage" />
 <div class="row">
     <div class="col-md-6">
         <form id="profile-form" method="post">
