added google auth (not completed)

--- a/Tendr/Views/Home/Index.cshtml
+++ b/Tendr/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div id="root"></div>
-		@if (Context.Request.Host.Host == "app.tendr.local")
+		@if (Context.Request.Host.Host == "app.tendr.montr.io")
 		{
 			<script src="./assets/app.js"></script>
 		}
