--- a/Kompany/Views/Home/Index.cshtml
+++ b/Kompany/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
 	<title>Kompany</title>
 </head>
 <body>
-	<h1>Kompany</h1>
+	<div id="root"></div>
+	<script src="./assets/public.js"></script>
 </body>
 </html>
