--- a/Tendr/Views/Home/Index.cshtml
+++ b/Tendr/Views/Home/Index.cshtml
@@ -11,11 +11,11 @@
 		<div id="root"></div>
 		@if (Context.Request.Host.Host == "app.tendr.montr.io")
 		{
-			<script src="./assets/app.js"></script>
+			<script src="./assets/tendr.app.js"></script>
 		}
 		else
 		{
-			<script src="./assets/public.js"></script>
+			<script src="./assets/tendr.js"></script>
 		}
 	</body>
 </html>
