removed account api controller

--- a/Idx/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/Idx/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @model ExternalLoginsModel
 @{
-    ViewData["Title"] = "Manage your external logins";
+	Layout = "./_Layout.cshtml";
+	ViewData["Title"] = "Manage your external logins";
 }
 
 <partial name="_StatusMessage", for="StatusMessage" />
