--- a/Kompany/Views/Home/Index.cshtml
+++ b/Kompany/Views/Home/Index.cshtml
@@ -8,6 +8,6 @@
 </head>
 <body>
 	<div id="root"></div>
-	<script src="./assets/kompany.js"></script>
+	<script src="/assets/kompany.js"></script>
 </body>
 </html>
