fixed authenticated api calls

--- a/ui/modules/tendr/index.less
+++ b/ui/modules/tendr/index.less
@@ -20,7 +20,7 @@
 
 .ant-layout {
 	.ant-layout-sider {
-		text-transform: uppercase;
+		/* text-transform: uppercase; */
 	}
 
 	.ant-layout-content {
