--- a/Idx/Views/Shared/_LoginPartial.cshtml
+++ b/Idx/Views/Shared/_LoginPartial.cshtml
@@ -1,10 +1,10 @@
-@using Idx.Entities
+﻿@using Idx.Entities
 @using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<DbUser> SignInManager
 @inject UserManager<DbUser> UserManager
 
-@if (SignInManager.IsSignedIn(User))
+@if (SignInManager.IsSignedIn(User) && !true.Equals(ViewData["signed-out"]))
 {
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
