configured company menu for all ui apps

--- a/ui/modules/tendr/index.less
+++ b/ui/modules/tendr/index.less
@@ -1,3 +1,9 @@
+.ant-layout.private-layout {
+	.ant-menu-vertical .user-menu .ant-menu-submenu-title {
+		height: 64px;
+	}
+}
+
 .ant-layout.public-layout {
 	background-color: inherit;
 
