--- a/ui/modules/tendr/index.less
+++ b/ui/modules/tendr/index.less
@@ -1,3 +1,5 @@
+// @import (css) url("//fonts.googleapis.com/css?family=Open+Sans:300");
+
 .ant-layout.private-layout {
 	.ant-menu-vertical .user-menu .ant-menu-submenu-title {
 		height: 64px;
