page and selector for classifier types

--- a/ui/modules/tendr/index.less
+++ b/ui/modules/tendr/index.less
@@ -1,4 +1,4 @@
-// @import (css) url("//fonts.googleapis.com/css?family=Open+Sans:300");
+@import (css) url("//fonts.googleapis.com/css?family=Open+Sans:400");
 
 .ant-layout.private-layout {
 	.ant-menu-vertical .user-menu .ant-menu-submenu-title {
