simple ui for insert, update, delete classifier types

--- a/ui/modules/tendr/index.less
+++ b/ui/modules/tendr/index.less
@@ -1,8 +1,12 @@
-@import (css) url("//fonts.googleapis.com/css?family=Open+Sans:400");
+// @import (css) url("//fonts.googleapis.com/css?family=Open+Sans:400");
 
 .ant-layout.private-layout {
 	.ant-menu-vertical .user-menu .ant-menu-submenu-title {
 		height: 64px;
+	}
+
+	.toolbar .ant-btn {
+		margin-left: 4px;
 	}
 }
 
