added empty drawer to select counterparties

--- a/src/ui/modules/tendr/index.less
+++ b/src/ui/modules/tendr/index.less
@@ -4,6 +4,10 @@
 	.ant-menu-vertical .user-menu .ant-menu-submenu-title {
 		height: 64px;
 	}
+
+	.ant-layout-footer {
+		padding-left: 24px;
+	}
 }
 
 .ant-layout.public-layout {
