fixed multi-layout (using key={} in routes map forces re-render whole page)

--- a/src/Host/Views/Home/Index.cshtml
+++ b/src/Host/Views/Home/Index.cshtml
@@ -10,8 +10,7 @@
 	<script>
 		var COOKIE_DOMAIN = "@Environment.GetEnvironmentVariable("COOKIE_DOMAIN")";
 		var AUTHORITY_APP_URL = "@Environment.GetEnvironmentVariable("AUTHORITY_APP_URL")";
-		var PUBLIC_APP_URL = "@Environment.GetEnvironmentVariable("PUBLIC_APP_URL")";
-		var PRIVATE_APP_URL = "@Environment.GetEnvironmentVariable("PRIVATE_APP_URL")";
+		var APP_URL = "@Environment.GetEnvironmentVariable("APP_URL")";
 	</script>
 	<script src="/assets/app.js"></script>
 </body>
