fixed rest of urls after switched to multi-layout

--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -1,3 +1,46 @@
+// @import (css) url("//fonts.googleapis.com/css?family=Open+Sans:400");
+
+.ant-layout.private-layout {
+	.ant-menu-vertical .user-menu .ant-menu-submenu-title {
+		height: 64px;
+	}
+
+	.ant-layout-footer {
+		padding: 24px;
+	}
+}
+
+.ant-layout.public-layout {
+	background-color: inherit;
+
+	.logo {
+		width: 120px;
+		height: 31px;
+		background: #eee;
+		margin: 16px 24px 16px 0;
+		float: left;
+	}
+
+	.ant-layout-header {
+		background-color: inherit;
+	}
+
+	.ant-layout-footer {
+		background-color: inherit;
+	}
+}
+
+.ant-layout {
+	.ant-layout-sider {
+		/* text-transform: uppercase; */
+	}
+
+	.ant-layout-content {
+		overflow: initial;
+		padding: 16px 24px;
+	}
+}
+
 .ant-menu {
 	.menu-header {
 		cursor: default;
