--- a/src/Idx/Views/Shared/_LoginPartial.cshtml
+++ b/src/Idx/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@using Idx.Entities
-@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity
+@using Montr.Idx.Impl.Entities
 
 @inject SignInManager<DbUser> SignInManager
 @inject UserManager<DbUser> UserManager
