ui: dynamic imports

--- a/src/Host/Views/Home/Index.cshtml
+++ b/src/Host/Views/Home/Index.cshtml
@@ -12,6 +12,6 @@
 		var AUTHORITY_APP_URL = "@Environment.GetEnvironmentVariable("AUTHORITY_APP_URL")";
 		var APP_URL = "@Environment.GetEnvironmentVariable("APP_URL")";
 	</script>
-	<script src="/assets/app.js"></script>
+	<script src="/assets/app.bundle.js"></script>
 </body>
 </html>
