--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -1,4 +1,7 @@
+// @import "~antd/dist/antd.less";
 // @import (css) url("//fonts.googleapis.com/css?family=Open+Sans:400");
+
+@normal-color: rgba(0, 0, 0, 0.65);
 
 .ant-layout.private-layout {
 	.ant-menu-vertical .user-menu .ant-menu-submenu-title {
@@ -38,6 +41,17 @@
 	.ant-layout-content {
 		overflow: initial;
 		padding: 16px 24px;
+	}
+
+	.ant-layout-footer {
+		.language-selector {
+			float: right;
+			padding-right: 10px;
+
+			a {
+				color: @normal-color;
+			}
+		}
 	}
 }
 
