idx: initial user profile page

--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -44,14 +44,17 @@
 	}
 
 	.ant-layout-footer {
+
 		.language-selector {
 			float: right;
 			padding-right: 10px;
+			min-width: 100px;
 
 			a {
 				color: @normal-color;
 			}
 		}
+
 	}
 }
 
