host: added simple auth layout

--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -1,7 +1,27 @@
 @import '~antd/es/style/themes/default.less';
 // @import (css) url("//fonts.googleapis.com/css?family=Open+Sans:400");
 
+.logo {
+	font-size: 20px;
+	color: #1890ff;
+	/* padding: 8px 0 0 22px; */
+    line-height: 64px;
+	height: 64px;
+    vertical-align: baseline;
+}
+
 .ant-layout.private-layout {
+	/* .ant-layout-sider  {
+		box-shadow: 0 1px 4px rgba(0,21,41,.08);
+
+		.ant-menu-root {
+			border-right: 0;
+		}
+	}
+
+	.logo {
+	} */
+
 	.ant-menu-vertical .user-menu .ant-menu-submenu-title {
 		height: 64px;
 	}
@@ -14,11 +34,6 @@
 	background-color: inherit;
 
 	.logo {
-		width: 120px;
-		height: 31px;
-		background: #eee;
-		margin: 16px 24px 16px 0;
-		float: left;
 	}
 
 	.ant-layout-header {
