code: converted pane-edit-metadata.tsx to class

--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -2,7 +2,7 @@
 // @import (css) url("//fonts.googleapis.com/css?family=Open+Sans:400");
 @import (css) url('//fonts.googleapis.com/css?family=Nunito&display=swap');
 
-h2, .ant-modal-header .ant-modal-title {
+h2, .ant-modal-header .ant-modal-title, .ant-drawer-title {
 	font-weight: bold;
 }
 
