core: bottom toolbar in pane-edit-metadata

--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -94,7 +94,7 @@ h2, .ant-modal-header .ant-modal-title, .ant-drawer-title {
 		float: left;
 
 		.ant-btn, .ant-btn-group, .ant-radio-group, .ant-select {
-			margin-right: 4px;
+			margin-right: 6px;
 			margin-bottom: 4px;
 		}
 
@@ -107,7 +107,28 @@ h2, .ant-modal-header .ant-modal-title, .ant-drawer-title {
 		float: right;
 
 		.ant-btn, .ant-btn-group, .ant-radio-group, .ant-select {
-			margin-left: 4px;
+			margin-left: 6px;
+			margin-bottom: 4px;
+		}
+
+		.ant-btn-group .ant-btn {
+			margin-left: 0;
+		}
+	}
+
+	&.toolbar-bottom {
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		width: 100%;
+		margin-bottom: 0;
+		border-top: 1px solid #e9e9e9;
+		padding: 10px 16px;
+		background: #fff;
+		text-align: right;
+
+		.ant-btn, .ant-btn-group, .ant-radio-group, .ant-select {
+			margin-left: 6px;
 			margin-bottom: 4px;
 		}
 
