switched font from Nunito to Segoe UI

--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -1,6 +1,6 @@
 @import '~antd/es/style/themes/default.less';
 // @import (css) url("//fonts.googleapis.com/css?family=Open+Sans:400");
-@import (css) url('//fonts.googleapis.com/css?family=Nunito&display=swap');
+// @import (css) url('//fonts.googleapis.com/css?family=Nunito&display=swap');
 
 h2, .ant-modal-header .ant-modal-title, .ant-drawer-title {
 	font-weight: bold;
