mdm: added display of classifier fields

--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -152,6 +152,10 @@ h2, .ant-modal-header .ant-modal-title, .ant-drawer-title {
 	text-overflow: ellipsis;
 }
 
+.empty-field {
+	color: lightgrey;
+}
+
 .external-logins {
 	.adn {
 		background-color: #D87A68
