removed security warnings

--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -151,7 +151,7 @@ h2, .ant-modal-header .ant-modal-title, .ant-drawer-title {
 }
 
 .bg-white {
-	background-color: #fff;
+	background-color: #fff !important;
 }
 
 .single-line-text {
