misc app changes

--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -96,6 +96,7 @@ h2, .ant-modal-header .ant-modal-title, .ant-drawer-title {
 
 .toolbar {
 
+	margin-top: 4px;
 	margin-bottom: 4px;
 
 	&.toolbar-left {
