docs: further view document improvements

--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -178,10 +178,12 @@ h2, .ant-modal-header .ant-modal-title, .ant-drawer-title {
 	}
 }
 
-.ant-form-item-label {
-	label {
-		height: auto;
-		white-space: normal;
+.ant-form {
+	.ant-form-item-label {
+		label {
+			height: auto;
+			white-space: normal;
+		}
 	}
 }
 
