core ui: initial data sider component

--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -152,6 +152,14 @@ h2, .ant-modal-header .ant-modal-title, .ant-drawer-title {
 	}
 }
 
+.ant-layout.ant-page-layout .ant-layout-content {
+	// padding-top: 0;
+	padding-left: 0;
+}
+.ant-layout.ant-page-layout, .ant-layout-sider.ant-page-layout-sider {
+	background-color: transparent;
+}
+
 .bg-white {
 	background-color: #fff !important;
 }
