--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -152,10 +152,15 @@ h2, .ant-modal-header .ant-modal-title, .ant-drawer-title {
 	}
 }
 
-.ant-layout.ant-page-layout .ant-layout-content {
-	// padding-top: 0;
-	padding-left: 0;
+.ant-layout.ant-page-layout {
+	padding-top: 16px;
+
+	.ant-layout-content {
+		padding-top: 0;
+		padding-left: 0;
+	}
 }
+
 .ant-layout.ant-page-layout, .ant-layout-sider.ant-page-layout-sider {
 	background-color: transparent;
 }
