docs: simple related document pane

--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -186,6 +186,10 @@ h2, .ant-modal-header .ant-modal-title, .ant-drawer-title {
 	.ant-form-item {
 		margin-bottom: 16px;
 
+		label {
+			color: @text-color-secondary;
+		}
+
 		.ant-form-item-control-input {
 			min-height: auto;
 		}
@@ -202,7 +206,7 @@ h2, .ant-modal-header .ant-modal-title, .ant-drawer-title {
 }
 
 .empty-field {
-	color: lightgrey;
+	color: @disabled-color;
 }
 
 .external-logins {
